--- a/runtime/pages/sidebar_dynamicDataFiltering.Rmd
+++ b/runtime/pages/sidebar_dynamicDataFiltering.Rmd
@@ -10,6 +10,8 @@ selectizeInput("filterNoticed", "Participants that noticed VFD", choices = c(TRU
 selectizeInput("filterTrials", "Trials", choices = c(1,2,3,4,5,6), selected = c(1,2,3,4,5,6), multiple = TRUE)
 selectizeInput("filterVFD", "VFD", choices = c(TRUE, FALSE), selected = c(TRUE, FALSE), multiple = TRUE)
 selectizeInput("filterPractice", "Familiarization", choices = c(TRUE, FALSE), selected = c(FALSE), multiple = TRUE)
+selectizeInput("filterConditionNumber", "Condition number", choices = c(1,2), selected = c(1,2), multiple = TRUE)
+
 selectizeInput("filterTrialsWithinCondition", "Trials (within condition)", choices = c(0,1,2), selected = c(0,1,2), multiple = TRUE)
 selectizeInput("filterTrialsWithoutPractice", "Trials (without practice)", choices = c(0,1,2,3,4), selected = c(0,1,2,3,4), multiple = TRUE)
 ```
